Appended the fix of issue 28616, and also refactored code.